--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="sharedpreference_name">autoLogin</string>
+    <string name="name_hint_text">이름를 입력해주세요</string>
+    <string name="id_hint_text">아이디를 입력해주세요</string>
+    <string name="pass_hint_text">비밀번호를 입력해주세요</string>
 </resources>
